--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,7 @@ set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
 set -g history-limit 100000
 set -g mouse on
+set -g set-clipboard on
 set -g focus-events on
 set -g renumber-windows on
 set -g escape-time 10
@@ -27,6 +28,7 @@ bind & kill-window
 # Clipboard: copy selection to macOS clipboard.
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "pbcopy"
 
 # Quick reload.
 bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux reloaded"
