--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,7 +28,7 @@ bind & kill-window
 # Clipboard: copy selection to macOS clipboard.
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
 
 # Quick reload.
-bind r source-file ~/.config/tmux/tmux.conf \; display-message "tmux reloaded"
+bind r source-file ~/.tmux.conf \; display-message "tmux reloaded"
