--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -16,6 +16,9 @@ history = 10000
 [selection]
 save_to_clipboard = true
 
+[mouse]
+hide_when_typing = true
+
 [cursor]
 style = { shape = "Block", blinking = "Off" }
 
@@ -27,8 +30,8 @@ italic = { family = "GeistMono Nerd Font", style = "Italic" }
 bold_italic = { family = "GeistMono Nerd Font", style = "Bold Italic" }
 
 [colors]
-primary = { background = "#2e3440", foreground = "#d8dee9" }
+primary = { background = "#252b34", foreground = "#d8dee9" }
 normal = { black = "#3b4252", red = "#bf616a", green = "#a3be8c", yellow = "#ebcb8b", blue = "#81a1c1", magenta = "#b48ead", cyan = "#88c0d0", white = "#e5e9f0" }
 bright = { black = "#4c566a", red = "#bf616a", green = "#a3be8c", yellow = "#ebcb8b", blue = "#81a1c1", magenta = "#b48ead", cyan = "#8fbcbb", white = "#eceff4" }
-selection = { text = "#2e3440", background = "#b48ead" }
-cursor = { text = "#2e3440", cursor = "#ebcb8b" }
+selection = { text = "#252b34", background = "#b48ead" }
+cursor = { text = "#252b34", cursor = "#ebcb8b" }
