--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -5,13 +5,44 @@ palette = "nord"
 format = "🧉 $os$username$hostname$directory$git_branch$git_status$aws$docker_context$nodejs$bun$python$golang$rust$lua$c $character"
 
 [palettes.nord]
-text = "#d8dee9"
-subtext = "#e5e9f0"
-red = "#bf616a"
-orange = "#d08770"
-yellow = "#ebcb8b"
-green = "#a3be8c"
-purple = "#b48ead"
+text = "#D8DEE9"
+subtext = "#E5E9F0"
+red = "#BF616A"
+orange = "#D08770"
+yellow = "#EBCB8B"
+green = "#A3BE8C"
+purple = "#B48EAD"
+black0 = "#191D24"
+black1 = "#1E222A"
+black2 = "#222630"
+gray0 = "#242933"
+gray1 = "#2E3440"
+gray2 = "#3B4252"
+gray3 = "#434C5E"
+gray4 = "#4C566A"
+gray5 = "#60728A"
+white0_normal = "#BBC3D4"
+white0_reduce_blue = "#C0C8D8"
+white1 = "#D8DEE9"
+white2 = "#E5E9F0"
+white3 = "#ECEFF4"
+blue0 = "#5E81AC"
+blue1 = "#81A1C1"
+blue2 = "#88C0D0"
+cyan = "#8FBCBB"
+cyan_bright = "#9FC6C5"
+cyan_dim = "#80B3B2"
+red_bright = "#C5727A"
+red_dim = "#B74E58"
+orange_bright = "#D79784"
+orange_dim = "#CB775D"
+yellow_bright = "#EFD49F"
+yellow_dim = "#E7C173"
+green_bright = "#B1C89D"
+green_dim = "#97B67C"
+magenta = "#B48EAD"
+magenta_bright = "#BE9DB8"
+magenta_dim = "#A97EA1"
 
 [username]
 disabled = false
@@ -37,7 +68,7 @@ Debian = ""
 NixOS = ""
 
 [directory]
-style = "fg:purple"
+style = "fg:yellow"
 format = "[$path]($style) "
 truncate_to_repo = true
 truncation_length = 3
