--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
+set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[ q"
 set -g history-limit 100000
 set -g mouse on
 set -g set-clipboard on
@@ -9,6 +10,40 @@ set -g escape-time 10
 set -g repeat-time 300
 set -g allow-rename on
 setw -g automatic-rename on
+
+# Message style.
+set -g message-style "fg=#EBCB8B,bg=#2E3440"
+set -g message-command-style "fg=#EBCB8B,bg=#2E3440"
+
+# Command prompt cursor color.
+set -g prompt-cursor-colour "#EBCB8B"
+
+# Cursor style for panes.
+set -g cursor-style "blinking-bar"
+
+# Pane style.
+set -g pane-border-style "fg=#4C566A"
+set -g pane-active-border-style "fg=#A3BE8C"
+set-window-option -g pane-border-status off
+
+# Status style.
+set -g status on
+set -g status-interval 5
+set -g status-style "fg=#EBCB8B,bg=#2E3440"
+set -g status-left "#[fg=#BF616A,bg=#2E3440]#[fg=#2E3440,bg=#BF616A] #{session_windows}#[fg=#BF616A,bg=#2E3440]  "
+set -g status-right "#[fg=#D08770,bg=#2E3440] #S #[fg=#A3BE8C,bg=#2E3440] #[fg=#2E3440,bg=#A3BE8C]󱫋 #{session_attached}#[fg=#A3BE8C,bg=#2E3440]"
+set -g status-left-length 100
+set -g status-position top
+set -g status-justify left
+
+# Window style.
+set -g window-status-style "fg=#B48EAD,bg=#2E3440"
+set -g window-status-format "#[fg=#4C566A,bg=#2E3440] #[fg=#4C566A,bg=#2E3440]#W"
+set -g window-status-separator "  "
+set -g window-status-current-format "#[fg=#A3BE8C,bg=#2E3440] #[fg=#A3BE8C,bg=#2E3440]#W"
+
+set -g window-status-bell-style "fg=#EBCB8B,bg=#2E3440"
+set -g bell-action any
 
 # Start counting windows/panes from 1 and use vi keys in copy mode.
 set -g base-index 1
