--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -5,9 +5,9 @@ TERM = "xterm-256color"
 decorations = "Buttonless"
 dynamic_padding = false
 opacity = 1.0
-padding = { x = 0, y = 0 }
+padding = { x = 0, y = 1 }
 option_as_alt = "Both"
-dimensions = { columns = 130, lines = 40 }
+dimensions = { columns = 160, lines = 50 }
 blur = false
 
 [scrolling]
@@ -20,7 +20,7 @@ save_to_clipboard = true
 hide_when_typing = true
 
 [cursor]
-style = { shape = "Block", blinking = "Off" }
+style = { shape = "Beam", blinking = "On" }
 
 [font]
 size = 16
@@ -30,8 +30,8 @@ italic = { family = "GeistMono Nerd Font", style = "Italic" }
 bold_italic = { family = "GeistMono Nerd Font", style = "Bold Italic" }
 
 [colors]
-primary = { background = "#252b34", foreground = "#d8dee9" }
-normal = { black = "#3b4252", red = "#bf616a", green = "#a3be8c", yellow = "#ebcb8b", blue = "#81a1c1", magenta = "#b48ead", cyan = "#88c0d0", white = "#e5e9f0" }
-bright = { black = "#4c566a", red = "#bf616a", green = "#a3be8c", yellow = "#ebcb8b", blue = "#81a1c1", magenta = "#b48ead", cyan = "#8fbcbb", white = "#eceff4" }
-selection = { text = "#252b34", background = "#b48ead" }
-cursor = { text = "#252b34", cursor = "#ebcb8b" }
+primary = { background = "#242933", foreground = "#D8DEE9" }
+normal = { black = "#1E222A", red = "#BF616A", green = "#A3BE8C", yellow = "#EBCB8B", blue = "#81A1C1", magenta = "#B48EAD", cyan = "#8FBCBB", white = "#E5E9F0" }
+bright = { black = "#4C566A", red = "#C5727A", green = "#B1C89D", yellow = "#EFD49F", blue = "#88C0D0", magenta = "#BE9DB8", cyan = "#9FC6C5", white = "#ECEFF4" }
+selection = { text = "#242933", background = "#5E81AC" }
+cursor = { text = "#242933", cursor = "#EBCB8B" }
