--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,5 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",xterm-256color:RGB"
-set -ga terminal-overrides ",*:Ss=\\E[%p1%d q:Se=\\E[ q"
 set -g history-limit 100000
 set -g mouse on
 set -g set-clipboard on
@@ -15,11 +14,8 @@ setw -g automatic-rename on
 set -g message-style "fg=#EBCB8B,bg=#2E3440"
 set -g message-command-style "fg=#EBCB8B,bg=#2E3440"
 
-# Command prompt cursor color.
-set -g prompt-cursor-colour "#EBCB8B"
 
 # Cursor style for panes.
-set -g cursor-style "blinking-bar"
 
 # Pane style.
 set -g pane-border-style "fg=#4C566A"
@@ -34,7 +30,7 @@ set -g status-left "#[fg=#BF616A,bg=#2E3440]#[fg=#2E3440,bg=#BF616A] #{ses
 set -g status-right "#[fg=#D08770,bg=#2E3440] #S #[fg=#A3BE8C,bg=#2E3440] #[fg=#2E3440,bg=#A3BE8C]󱫋 #{session_attached}#[fg=#A3BE8C,bg=#2E3440]"
 set -g status-left-length 100
 set -g status-position top
-set -g status-justify left
+set -g status-justify center
 
 # Window style.
 set -g window-status-style "fg=#B48EAD,bg=#2E3440"
