--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -4,11 +4,11 @@ TERM = "xterm-256color"
 [window]
 decorations = "Buttonless"
 dynamic_padding = false
-opacity = 1.0
-padding = { x = 0, y = 1 }
+opacity = 0.95
+padding = { x = 0, y = 0 }
 option_as_alt = "Both"
-dimensions = { columns = 160, lines = 50 }
-blur = false
+dimensions = { columns = 160, lines = 100 }
+blur = true
 
 [scrolling]
 history = 10000
@@ -30,8 +30,8 @@ italic = { family = "GeistMono Nerd Font", style = "Italic" }
 bold_italic = { family = "GeistMono Nerd Font", style = "Bold Italic" }
 
 [colors]
-primary = { background = "#242933", foreground = "#D8DEE9" }
-normal = { black = "#1E222A", red = "#BF616A", green = "#A3BE8C", yellow = "#EBCB8B", blue = "#81A1C1", magenta = "#B48EAD", cyan = "#8FBCBB", white = "#E5E9F0" }
-bright = { black = "#4C566A", red = "#C5727A", green = "#B1C89D", yellow = "#EFD49F", blue = "#88C0D0", magenta = "#BE9DB8", cyan = "#9FC6C5", white = "#ECEFF4" }
-selection = { text = "#242933", background = "#5E81AC" }
-cursor = { text = "#242933", cursor = "#EBCB8B" }
+primary = { background = "#2E3440", foreground = "#D8DEE9" }
+normal = { black = "#3B4252", red = "#BF616A", green = "#A3BE8C", yellow = "#EBCB8B", blue = "#81A1C1", magenta = "#B48EAD", cyan = "#88C0D0", white = "#E5E9F0" }
+bright = { black = "#4C566A", red = "#D08770", green = "#A3BE8C", yellow = "#EBCB8B", blue = "#5E81AC", magenta = "#B48EAD", cyan = "#8FBCBB", white = "#ECEFF4" }
+selection = { text = "#2E3440", background = "#5E81AC" }
+cursor = { text = "#2E3440", cursor = "#EBCB8B" }
