--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -24,13 +24,13 @@ style = { shape = "Beam", blinking = "On" }
 
 [font]
 size = 16
-normal = { family = "GeistMono Nerd Font", style = "Regular" }
-bold = { family = "GeistMono Nerd Font", style = "Bold" }
-italic = { family = "GeistMono Nerd Font", style = "Italic" }
-bold_italic = { family = "GeistMono Nerd Font", style = "Bold Italic" }
+normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
+bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
+italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
+bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
 
 [colors]
-primary = { background = "#2E3440", foreground = "#D8DEE9" }
+primary = { background = "#1F242E", foreground = "#D8DEE9" }
 normal = { black = "#3B4252", red = "#BF616A", green = "#A3BE8C", yellow = "#EBCB8B", blue = "#81A1C1", magenta = "#B48EAD", cyan = "#88C0D0", white = "#E5E9F0" }
 bright = { black = "#4C566A", red = "#D08770", green = "#A3BE8C", yellow = "#EBCB8B", blue = "#5E81AC", magenta = "#B48EAD", cyan = "#8FBCBB", white = "#ECEFF4" }
 selection = { text = "#2E3440", background = "#5E81AC" }
