--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,8 +11,8 @@ set -g allow-rename on
 setw -g automatic-rename on
 
 # Message style.
-set -g message-style "fg=#EBCB8B,bg=#2E3440"
-set -g message-command-style "fg=#EBCB8B,bg=#2E3440"
+set -g message-style "fg=#EBCB8B,bg=#191d24"
+set -g message-command-style "fg=#EBCB8B,bg=#191d24"
 
 
 # Cursor style for panes.
@@ -25,20 +25,20 @@ set-window-option -g pane-border-status off
 # Status style.
 set -g status on
 set -g status-interval 5
-set -g status-style "fg=#EBCB8B,bg=#2E3440"
-set -g status-left "#[fg=#BF616A,bg=#2E3440]#[fg=#2E3440,bg=#BF616A] #{session_windows}#[fg=#BF616A,bg=#2E3440]  "
-set -g status-right "#[fg=#D08770,bg=#2E3440] #S #[fg=#A3BE8C,bg=#2E3440] #[fg=#2E3440,bg=#A3BE8C]󱫋 #{session_attached}#[fg=#A3BE8C,bg=#2E3440]"
+set -g status-style "fg=#EBCB8B,bg=#191d24"
+set -g status-left "#[fg=#88C0D0,bg=#191d24]#[fg=#191d24,bg=#88C0D0] #{session_windows}#[fg=#88C0D0,bg=#191d24]  "
+set -g status-right "#[fg=#D08770,bg=#191d24] #S #[fg=#A3BE8C,bg=#191d24] #[fg=#191d24,bg=#A3BE8C]󱫋 #{session_attached}#[fg=#A3BE8C,bg=#191d24]"
 set -g status-left-length 100
 set -g status-position top
-set -g status-justify center
+set -g status-justify left
 
 # Window style.
-set -g window-status-style "fg=#B48EAD,bg=#2E3440"
-set -g window-status-format "#[fg=#4C566A,bg=#2E3440] #[fg=#4C566A,bg=#2E3440]#W"
+set -g window-status-style "fg=#B48EAD,bg=#191d24"
+set -g window-status-format "#[fg=#4C566A,bg=#191d24] #[fg=#4C566A,bg=#191d24]#W"
 set -g window-status-separator "  "
-set -g window-status-current-format "#[fg=#A3BE8C,bg=#2E3440] #[fg=#A3BE8C,bg=#2E3440]#W"
+set -g window-status-current-format "#[fg=#9FC6C5,bg=#191d24] #[fg=#9FC6C5,bg=#191d24]#W"
 
-set -g window-status-bell-style "fg=#EBCB8B,bg=#2E3440"
+set -g window-status-bell-style "fg=#EBCB8B,bg=#191d24"
 set -g bell-action any
 
 # Start counting windows/panes from 1 and use vi keys in copy mode.
