--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -16,6 +16,10 @@ set -g message-command-style "fg=#EBCB8B,bg=#191D24"
 
 
 # Cursor style for panes.
+# Allow apps to set/reset cursor shape inside tmux.
+# Reset to tmux's default cursor (blinking bar) when apps exit.
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[5 q'
+set -g cursor-style blinking-bar
 
 # Pane style.
 set -g pane-border-style "fg=#4C566A"
