--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,49 +1,22 @@
 set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",xterm-256color:RGB"
+set -ga terminal-overrides ",xterm-256color:RGB,tmux-256color:RGB"
+set -g xterm-keys on
+set -g default-shell "$SHELL"
+set -g default-command "$SHELL -l"
 set -g history-limit 100000
 set -g mouse on
 set -g set-clipboard on
 set -g focus-events on
+set -g status-keys vi
 set -g renumber-windows on
 set -g escape-time 10
 set -g repeat-time 300
 set -g allow-rename on
 setw -g automatic-rename on
 
-# Message style.
-set -g message-style "fg=#EBCB8B,bg=#191D24"
-set -g message-command-style "fg=#EBCB8B,bg=#191D24"
-
-
-# Cursor style for panes.
-# Allow apps to set/reset cursor shape inside tmux.
-# Reset to tmux's default cursor (blinking bar) when apps exit.
-set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[5 q'
-set -g cursor-style blinking-bar
-
-# Pane style.
-set -g pane-border-style "fg=#4C566A"
-set -g pane-active-border-style "fg=#A3BE8C"
-set-window-option -g pane-border-status off
-
-# Status style.
+# Status line (simple green)
 set -g status on
-set -g status-interval 5
-set -g status-style "fg=#EBCB8B,bg=#191D24"
-set -g status-left "#[fg=#88C0D0,bg=#191D24]#[fg=#191D24,bg=#88C0D0] #{session_windows}#[fg=#88C0D0,bg=#191D24]  "
-set -g status-right "#[fg=#D08770,bg=#191D24] #S #[fg=#A3BE8C,bg=#191D24] #[fg=#191D24,bg=#A3BE8C]󱫋 #{session_attached}#[fg=#A3BE8C,bg=#191D24]"
-set -g status-left-length 100
-set -g status-position top
-set -g status-justify left
-
-# Window style.
-set -g window-status-style "fg=#B48EAD,bg=#191D24"
-set -g window-status-format "#[fg=#4C566A,bg=#191D24] #[fg=#4C566A,bg=#191D24]#W"
-set -g window-status-separator "  "
-set -g window-status-current-format "#[fg=#9FC6C5,bg=#191D24] #[fg=#9FC6C5,bg=#191D24]#W"
-
-set -g window-status-bell-style "fg=#EBCB8B,bg=#191D24"
-set -g bell-action any
+set -g status-style "fg=black,bg=green"
 
 # Start counting windows/panes from 1 and use vi keys in copy mode.
 set -g base-index 1
@@ -61,9 +34,17 @@ bind x kill-pane
 bind & kill-window
 
 # Clipboard: copy selection to macOS clipboard.
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi V send -X select-line
 bind -T copy-mode-vi y send -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "pbcopy"
 bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-and-cancel "pbcopy"
+
+# Resize panes with repeatable H/J/K/L.
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # Quick reload.
 bind r source-file ~/.tmux.conf \; display-message "tmux reloaded"
