Update better config

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,5 +46,11 @@ bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
+# Toggle pane zoom (maximize/restore).
+bind m resize-pane -Z
+
+# Clear pane history.
+bind -r C-k clear-history
+
 # Quick reload.
 bind r source-file ~/.tmux.conf \; display-message "tmux reloaded"
