--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -24,10 +24,10 @@ style = { shape = "Beam", blinking = "On" }
 
 [font]
 size = 22
-normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
-bold = { family = "JetBrainsMono Nerd Font", style = "Bold" }
-italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
-bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
+normal = { family = "GeistMono Nerd Font Propo", style = "Regular" }
+bold = { family = "GeistMono Nerd Font Propo", style = "Bold" }
+italic = { family = "GeistMono Nerd Font Propo", style = "Italic" }
+bold_italic = { family = "JetbrainsMono Nerd Font", style = "Bold Italic" }
 
 [colors.primary]
 background = "#101010"
