--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -4,22 +4,22 @@ palette = "terminal"
 format = "🧉 $os$username$hostname$directory$git_branch$git_status$aws$docker_context$nodejs$bun$python$golang$rust$lua$c $character"
 
 [palettes.terminal]
-black = "#1E2228"
-red = "#D78787"
-green = "#9BBE8F"
-yellow = "#D6C48C"
-blue = "#8FB7D9"
-magenta = "#C1A0C8"
-cyan = "#8CBEC3"
-white = "#C0C6D1"
-bright_black = "#6E7684"
-bright_red = "#E7A3A3"
-bright_green = "#B6D6AA"
-bright_yellow = "#E9D9A8"
-bright_blue = "#ABC6E6"
-bright_magenta = "#DAB3DF"
-bright_cyan = "#A8D7DC"
-bright_white = "#E6E9EF"
+black = "#0d0c0c"
+red = "#c4746e"
+green = "#8a9a7b"
+yellow = "#c4b28a"
+blue = "#8ba4b0"
+magenta = "#a292a3"
+cyan = "#8ea4a2"
+white = "#c8c093"
+bright_black = "#a6a69c"
+bright_red = "#e46876"
+bright_green = "#87a987"
+bright_yellow = "#e6c384"
+bright_blue = "#7fb4ca"
+bright_magenta = "#938aa9"
+bright_cyan = "#7aa89f"
+bright_white = "#c5c9c5"
 
 [username]
 disabled = false
@@ -42,7 +42,7 @@ NixOS = ""
 
 [directory]
 format = "[$path]($style) "
-style = "fg:magenta"
+style = "fg:cyan"
 truncate_to_repo = true
 truncation_length = 3
 truncation_symbol = " "
