--- a/starship/starship.toml
+++ b/starship/starship.toml
@@ -4,22 +4,22 @@ palette = "terminal"
 format = "🧉 $os$username$hostname$directory$git_branch$git_status$aws$docker_context$nodejs$bun$python$golang$rust$lua$c $character"
 
 [palettes.terminal]
-black = "#0d0c0c"
-red = "#c4746e"
-green = "#8a9a7b"
-yellow = "#c4b28a"
-blue = "#8ba4b0"
-magenta = "#a292a3"
-cyan = "#8ea4a2"
-white = "#c8c093"
-bright_black = "#a6a69c"
-bright_red = "#e46876"
-bright_green = "#87a987"
-bright_yellow = "#e6c384"
-bright_blue = "#7fb4ca"
-bright_magenta = "#938aa9"
-bright_cyan = "#7aa89f"
-bright_white = "#c5c9c5"
+black = "#000000"
+red = "#ea4a5a"
+green = "#34d058"
+yellow = "#ffea7f"
+blue = "#2188ff"
+magenta = "#b392f0"
+cyan = "#39c5cf"
+white = "#ffffff"
+bright_black = "#959da5"
+bright_red = "#f97583"
+bright_green = "#85e89d"
+bright_yellow = "#ffea7f"
+bright_blue = "#79b8ff"
+bright_magenta = "#b392f0"
+bright_cyan = "#56d4dd"
+bright_white = "#ffffff"
 
 [username]
 disabled = false
