--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -30,37 +30,33 @@ italic = { family = "GeistMono Nerd Font Propo", style = "Italic" }
 bold_italic = { family = "JetbrainsMono Nerd Font", style = "Bold Italic" }
 
 [colors.primary]
-background = "#181616"
-foreground = "#c5c9c5"
+background = "#24292e"
+foreground = "#d1d5da"
 
 [colors.normal]
-black = "#0d0c0c"
-red = "#c4746e"
-green = "#8a9a7b"
-yellow = "#c4b28a"
-blue = "#8ba4b0"
-magenta = "#a292a3"
-cyan = "#8ea4a2"
-white = "#c8c093"
+black = "#000000"
+red = "#ea4a5a"
+green = "#34d058"
+yellow = "#ffea7f"
+blue = "#2188ff"
+magenta = "#b392f0"
+cyan = "#39c5cf"
+white = "#ffffff"
 
 [colors.bright]
-black = "#a6a69c"
-red = "#e46876"
-green = "#87a987"
-yellow = "#e6c384"
-blue = "#7fb4ca"
-magenta = "#938aa9"
-cyan = "#7aa89f"
-white = "#c5c9c5"
-
-[colors.selection]
-background = "#2d4f67"
-foreground = "#c8c093"
+black = "#959da5"
+red = "#f97583"
+green = "#85e89d"
+yellow = "#ffea7f"
+blue = "#79b8ff"
+magenta = "#b392f0"
+cyan = "#56d4dd"
+white = "#ffffff"
 
 [[colors.indexed_colors]]
 index = 16
-color = "#b6927b"
+color = "#d18616"
 
 [[colors.indexed_colors]]
 index = 17
-color = "#b98d7b"
+color = "#f97583"
