--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,8 +14,8 @@ set -g repeat-time 300
 set -g allow-rename on
 setw -g automatic-rename on
 
-# Status line (simple green)
 set -g status on
+set -g status-position top
 set -g status-style "fg=black,bg=green"
 
 # Start counting windows/panes from 1 and use vi keys in copy mode.
