--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ set -g allow-rename on
 setw -g automatic-rename on
 
 set -g status on
-set -g status-position top
+set -g status-position bottom
 set -g status-style "fg=black,bg=green"
 
 # Start counting windows/panes from 1 and use vi keys in copy mode.
